


  This is list of recent PETSc changes before they are 
transported into the docs/changes.html file. (Because it
is a pain to always check that file out of SourceSafe to 
add to it).

  VEC

     

     

  MAT

  
  Another MatSetOption, MAT_IGNORE_ZERO_ENTRIES for AIJ matrices with ADD_VALUES.

added matrix option MAT_KEEP_ZEROED_ROWS causes MatZeroRows() to keep the original nonzero 
data structure and just put 0.0 into the elements that are to be zeroed. Without this option
it removes the locations from the nonzero structure    

  

  KSP

    

  SLES
 


  PC

  
 
  AO

    

  IS

    
  Draw

  

   
  General

   When doing string substitutions in library directory paths etc one must use ${PETSC_DIR} ${BOPT} etc now
instead of $PETSC_DIR etc. Also you can put anything in {anything} as long as it is an environmental variable or
passed in the options database with  -anything

 
  Viewers


 
  SNES 


  DA

    

  TS

   
