@@ -53,6 +53,9 @@ it removes the locations from the nonzero structure
 instead of $PETSC_DIR etc. Also you can put anything in {anything} as long as it is an environmental variable or
 passed in the options database with  -anything
 
+  Added PetscEmacsclientErrorHandler() -on_error_emacs [machinename] to allow emacs to jump to error; can be used
+with any other error handler.
+
  
   Viewers
 
